@@ -1,52 +1,0 @@
-<?php
-/**
- * A connector class between JSpace and DSpace (will be deleted if existed JSpaceFactory class will work)
- * 
- * @package		JSpace
- * @copyright	Copyright (C) 2012 Wijiti Pty Ltd. All rights reserved.
- * @license     This file is part of the JSpace library for Joomla!.
-
-   The JSpace library for Joomla! is free software: you can redistribute it 
-   and/or modify it under the terms of the GNU General Public License as 
-   published by the Free Software Foundation, either version 3 of the License, 
-   or (at your option) any later version.
-
-   The JSpace library for Joomla! is distributed in the hope that it will be 
-   useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with the JSpace library for Joomla!.  If not, see 
-   <http://www.gnu.org/licenses/>.
-
- * Contributors
- * Please feel free to add your name and email (optional) here if you have 
- * contributed any source code changes.
- * Name							Email
- * Piotr Dolistowski					<piotrdolistowski@wijiti.com> 
- * 
- */
-
-class JSpaceDSpace {
-    
-    const ITEM_ARCHIVE_LOCATION = '/media/com_jspace/archives/';
-    const ITEM_RESTURL          = 'http://localhost:8099/rest/items.xml';
-    
-    public function archive($package) {
-        
-        
-    }
-    
-    public function getArchiveLocation() {
-        
-        return self::ITEM_ARCHIVE_LOCATION;
-    }
-    
-    public function getItemRestUrl() {
-        
-        return self::ITEM_RESTURL;
-    }
-}
-
-?>
